@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-23T00:53:05Z",
-  "count_outdated" : 430,
-  "uniques_outdated" : 32,
+  "timestamp" : "2022-07-23T16:11:59Z",
+  "count_outdated" : 434,
+  "uniques_outdated" : 33,
   "count" : 449,
   "uniques" : 40,
   "views" : [
-    {
-      "timestamp": "2022-07-09T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-13T00:00:00Z",
       "count": 1,
