@@ -1,12 +1,7 @@
 {
-  "count": 19,
-  "uniques": 2,
+  "count": 15,
+  "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-07-09T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-13T00:00:00Z",
       "count": 1,
